Update patient field and change database schema